# nbody-simulation

./: .gitignore  CMakeLists.txt
src/: body.h  main.cpp
